# channels-multiprocessing

./: .gitignore  README.md  channels_multiprocessing.py  pyproject.toml
tests/: test_channels_details_multiprocessing.py  test_channels_multiprocessing.py
